Updated Dutch translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-06-01 02:20-0600\n"
-"PO-Revision-Date: 2021-03-29 16:56+0200\n"
-"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
+"PO-Revision-Date: 2021-06-01 13:27+0200\n"
+"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/gpodder/language/"
 "nl/)\n"
 "Language: nl\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 2.4.3\n"
 
 #: src/gpodder/config.py:53
 #, python-format
@@ -98,10 +98,8 @@ msgid "Paused"
 msgstr "Gepauzeerd"
 
 #: src/gpodder/download.py:864
-#, fuzzy
-#| msgid "Select the episodes you want to download:"
 msgid "Episode has no URL to download"
-msgstr "Selecteer de te downloaden afleveringen:"
+msgstr "De aflevering bevat geen url"
 
 #: src/gpodder/download.py:867
 msgid "Missing content from server"
@@ -708,10 +706,8 @@ msgid "Archive"
 msgstr "Archiveren"
 
 #: src/gpodder/gtkui/main.py:1718
-#, fuzzy
-#| msgid "_Refresh"
 msgid "Refresh image"
-msgstr "Ve_rversen"
+msgstr "Afbeelding verversen"
 
 #: src/gpodder/gtkui/main.py:1722
 msgid "Delete podcast"
@@ -1296,19 +1292,14 @@ msgstr "Abonnement gepauzeerd"
 #: src/gpodder/gtkui/shownotes.py:60
 #, python-format
 msgid "%s | %s | %s"
-msgstr ""
+msgstr "%s | %s | %s"
 
 #: src/gpodder/gtkui/shownotes.py:147
 msgid "Please select an episode"
 msgstr "Selecteer een aflevering"
 
 #: src/gpodder/gtkui/shownotes.py:313
-#, fuzzy, python-format
-#| msgid ""
-#| "<div id=\"gpodder-title\">\n"
-#| "<h3>%s</h3>\n"
-#| "<p>%s</p>\n"
-#| "</div>\n"
+#, python-format
 msgid ""
 "<div id=\"gpodder-title\">\n"
 "%s\n"
@@ -1316,9 +1307,9 @@ msgid ""
 "<p>%s</p></div>\n"
 msgstr ""
 "<div id=\"gpodder-title\">\n"
-"<h3>%s</h3>\n"
+"%s\n"
 "<p>%s</p>\n"
-"</div>\n"
+"<p>%s</p></div>\n"
 
 #: src/gpodder/gtkui/shownotes.py:355
 msgid "Open shownotes in web browser"
@@ -2085,10 +2076,8 @@ msgid "Select None"
 msgstr "Niets selecteren"
 
 #: share/gpodder/ui/gtk/gpodderpodcastdirectory.ui.h:7
-#, fuzzy
-#| msgid "Added"
 msgid "Add"
-msgstr "Toegevoegd"
+msgstr "Toevoegen"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:2
 msgid "Video player:"
@@ -2152,7 +2141,7 @@ msgstr "Als er nieuwe afleveringen beschikbaar zijn:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:22
 msgid "Check connection before updating (if supported)"
-msgstr ""
+msgstr "Verbinding controleren voorafgaand aan bijwerken (indien ondersteund)"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:23
 msgid "Updating"
